...
            android:onClick="openFileManager"
            app:srcCompat="@drawable/fileicon"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="336dp" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="openSchedule"
            app:srcCompat="@drawable/scheduleicon"
            tools:layout_editor_absoluteX="45dp"
...
